# news-subscriber

./: .cursorrules  .gitignore  ARCHITECTURE.md  README.md
backend/: Makefile  README.md  REORGANIZATION_SUMMARY.md  config.yaml  docker-compose.yaml  go.mod  go.sum
backend/api/proto/v1/: auth.pb.go  auth_grpc.pb.go  chat.pb.go  chat_grpc.pb.go  report.pb.go  report_grpc.pb.go  user.pb.go  user_grpc.pb.go
backend/migrations/: 001_init.sql
backend/spec/google-login/: README.md  architecture.md  implementation.md
backend/src/: main.go
backend/src/config/: config.go
backend/src/models/: user.go
backend/src/repository/chroma/: chroma.go
backend/src/repository/postgres/: db.go  invite_repository.go  user_repository.go
backend/src/service/: auth.go  chat.go  report.go  service.go  user.go
backend/tools/: redis.go
backend/tools/generate-invites/: main.go
backend/tools/migrate/: main.go
etl-worker/: .gitignore  .pre-commit-config.yaml  Makefile  PROJECT_SUMMARY.md  README.md  docker-compose.ollama.yml  docker-compose.yml  pyproject.toml  run_tests.py  start.sh
etl-worker/.github/workflows/: ci.yml
etl-worker/config/: config.yaml
etl-worker/docker/: Dockerfile
etl-worker/scripts/: manage-deps.py  setup-dev.sh
etl-worker/src/: __init__.py  load_config.py  main.py  mock_data_producer.py  test_pipeline.py
etl-worker/src/data_sources/: __init__.py  base.py  factory.py  mock_source.py
etl-worker/src/kafka_client/: __init__.py  producer.py
etl-worker/src/spark/: __init__.py  streaming_job.py
etl-worker/src/spark/stream_parser/: __init__.py  base.py  kafka_stream_parser.py
etl-worker/src/spark/stream_processors/: __init__.py  base.py  chunk_processor.py  embedding_processor.py  length_processor.py
etl-worker/src/spark/write_streamer/: base.py  chroma_writer_streamer.py  console_writer.py
etl-worker/src/storage/: __init__.py  base.py  chroma_storage.py
etl-worker/tests/: test_data_sources.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/auth/complete-signup/: route.ts
frontend/src/app/api/auth/google-login/: route.ts
frontend/src/app/api/chat/send/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/dashboard/: chat-interface.tsx  header.tsx  preference-panel.tsx  report-panel.tsx
frontend/src/components/ui/: button.tsx  label.tsx
frontend/src/lib/: api-client.ts  grpc-client.ts
frontend/src/lib/proto/: auth.ts  chat.ts  report.ts  user.ts
inference-worker/: .env.example  Dockerfile  requirements.txt
inference-worker/src/: tasks.py  worker.py
news-fetcher/: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  go.mod  go.sum  playground.go
news-fetcher/config/: config.yaml
news-fetcher/src/: main.go
news-fetcher/src/config/: config.go
news-fetcher/src/fetcher/: base.go  errors.go  guardian.go  newsapi.go  registry.go  types.go
news-fetcher/src/kafka/: converter.go  producer.go
news-fetcher/src/worker/: worker.go
protos/proto/: auth.proto  chat.proto  report.proto  user.proto
spec/feature/inference-worker/: plan.md  reference.md
